# vimcrypt-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/vimcrypt/: VimCrypt.h
src/: CipherStrategy.h  Utils.h  VimCrypt.cpp
src/cipher/: Blowfish.cpp  Blowfish.h
test/input/: README.md  test.decoded  test.encoded
